// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalTransformCache fetchResultFromURI fetches result 1`] = `
Object {
  "code": "/* code from http://globalcache.com/foo */",
  "dependencies": Array [],
  "dependencyOffsets": Array [],
}
`;

exports[`GlobalTransformCache fetchResultFromURI retries once on timeout 1`] = `
Object {
  "code": "/* code from http://globalcache.com/foo */",
  "dependencies": Array [],
  "dependencyOffsets": Array [],
}
`;

exports[`GlobalTransformCache fetches results 1`] = `
Array [
  Object {
    "code": "/* code from http://globalcache.com/43e279be6916de8be463ef98bd72ded391608371-foo.js */",
    "dependencies": Array [],
    "dependencyOffsets": Array [],
  },
  Object {
    "code": "/* code from http://globalcache.com/e09598ad4c807cb22b32d68cfc16e0cba7fdb85c-bar.js */",
    "dependencies": Array [],
    "dependencyOffsets": Array [],
  },
]
`;
